--- a/index.qmd
+++ b/index.qmd
@@ -37,35 +37,8 @@ listing:
   sort-ui: false
   filter-ui: false
 ---
-::: {.content-hidden when-format="pdf"}
-## About this book {.unnumbered}
+# Title
 
-What exactly is time? 
-This question even troubles world-renowned scientists.
-This book presents fifteen possibilities all bound into one compelling narrative.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam suscipit justo quis nisi viverra porttitor. Proin nec bibendum velit, a laoreet orci. Etiam nec turpis vel libero mollis congue. Cras laoreet non erat non rutrum. Vivamus laoreet, mi eget aliquam dapibus, augue urna porttitor leo, sit amet pellentesque odio augue ut tortor. Aliquam pretium euismod urna, non laoreet metus vestibulum nec. Sed facilisis in nunc sit amet tristique.
 
-Troubled philosopher Luca Cangemi wrestles with the fabric of time in a lecture that will transform the lives of every person in attendance: a grieving mother desperate to finish her degree, an immortal delivery driver, a psychonaut hell-bent on documenting her trips, a boy who dreams of living on Mars, and many others.
-
-They all discover something incredible about the nature of time. 
-Will you discover it too?
-
-This novella will interest future seekers, metaphysical deep-thinkers, sci-fi philosophers, and time-travel aficionados.
-
-## Reviews {.unnumbered}
-
-> “A book of unexpected insights and extraordinary grace, rippling with loveliness, sorrow, and finesse. All taking place in one room, bound by a single unraveling ribbon of time.”
-> 
-> -- **David Eagleman**, *NYT bestselling author and Stanford neuroscientist*
-
-> “Charter balances the light but rich ideas of philosophy and time with well-drawn if flawed characters, hustling and striving, and wishing for better lives. As one of them says, ‘There are no checks at the door. Anyone can walk in and expand their mind.’ I’m glad I took my seat for this novella and surrounded myself with the sounds and actions of its characters.”
-> 
-> -- **Tommy Dean**, *Editor of Fractured Lit and author of ‘Hollows’*
-
-> “An intriguing and emotionally involving book, where notions of how we experience time interweaves with the visceral complexity of life itself. Using the scenario of a single lecture about Time as the centrepiece, the author passes the narrative baton around a cast of intriguing characters, each with their own compelling issues and concerns.”
-> 
-> -- **KM Elkes**, *author of All That Is Between Us*
-
-## Content
-::: {#sample-listings}
-:::
-:::
+In id nulla lectus. Pellentesque iaculis nunc vel leo lobortis posuere. Vivamus laoreet urna vel tempus sollicitudin. Vestibulum a ipsum lacinia, imperdiet est in, fringilla quam. Nunc sodales laoreet est eget scelerisque. Praesent feugiat nisl sit amet turpis faucibus pretium. Fusce auctor nisl nec massa scelerisque, eu efficitur ex commodo. Maecenas sagittis sapien imperdiet, dictum dolor a, sollicitudin neque. Nulla aliquam vitae velit id pretium. Cras a sapien quam. Donec accumsan vitae ante in malesuada. Suspendisse quis sagittis enim, ac efficitur diam. Morbi pellentesque non magna in dignissim. Aenean semper, dui non maximus ullamcorper, risus ipsum interdum tellus, in eleifend massa lectus eu odio.
