--- a/preamble.tex
+++ b/preamble.tex
@@ -7,7 +7,7 @@
 % typographical settings for the body text
 \setlength{\parskip}{0em}
 \setlength{\parindent}{1em}
-\linespread{1.3}
+\linespread{1.2}
 
 % DEFINITIONS TITLE PAGE / COPYRIGHT
 \newcommand{\titleoriginal}{Title}
@@ -32,31 +32,61 @@
 % PHYSICAL DOCUMENT SETUP
 \setstocksize{210mm}{148mm}
 \settrimmedsize{210mm}{148mm}{*}
-\setbinding{5mm}
-\setlrmarginsandblock{8mm}{15mm}{*}
-\setulmarginsandblock{25mm}{26mm}{*}
+\setbinding{8mm}
+\setlrmarginsandblock{10mm}{18mm}{*}
+\setulmarginsandblock{22mm}{28mm}{*}
 
 % FONTS
+
 \usepackage{fontspec}
-\setmainfont{stone-serif}[
-    Path=./fonts/stone-serif-itc-pro/,
-    Scale=0.86,
-    Extension=.OTF,
+\setmainfont{Alegreya}[
+    Path=./fonts/alegreya/,
+    Scale=1,
+    Extension=.ttf,
     UprightFont=*-Regular,
-    BoldFont=*-SemiBd,
-    ItalicFont=*-MediumIt,
-    BoldItalicFont=*-SemiBdIt
-    ]
+    BoldFont=*-Bold,
+    ItalicFont=*-Italic,
+    BoldItalicFont=*-BoldItalic
+]
 
 \setsansfont{stone-sans}[
     Path=./fonts/stone-sans/,
-    Scale=0.82,
+    Scale=1,
     Extension=.otf,
     UprightFont=*-Medium,
     BoldFont=*-Semibold,
     ItalicFont=*-MediumItalic,
     BoldItalicFont=*-SemiBoldItalic
-    ]
+]
+
+% \setmainfont{stone-serif}[
+%     Path=./fonts/stone-serif-itc-pro/,
+%     Scale=1,
+%     Extension=.OTF,
+%     UprightFont=*-Regular,
+%     BoldFont=*-SemiBd,
+%     ItalicFont=*-MediumIt,
+%     BoldItalicFont=*-SemiBdIt
+% ]
+
+% \setsansfont{stone-sans}[
+%     Path=./fonts/stone-sans/,
+%     Scale=1,
+%     Extension=.otf,
+%     UprightFont=*-Medium,
+%     BoldFont=*-Semibold,
+%     ItalicFont=*-MediumItalic,
+%     BoldItalicFont=*-SemiBoldItalic
+% ]
+
+\newfontfamily{\kallisto}{Kallisto}[
+  Path=./fonts/kallisto/,
+  Extension=.otf,
+  UprightFont=* Medium,
+  BoldFont=* Bold,
+  ItalicFont=* Medium Italic,
+  BoldItalicFont=* Bold Italic
+]
 
 \usepackage{lettrine}
 \setcounter{DefaultLines}{3}
@@ -70,12 +100,12 @@
 
 % custom second title page
 \makeatletter
-\newcommand*\halftitlepage{\begingroup % Misericords, T&H p 153
+\newcommand*\halftitlepage{\begingroup 
   \setlength\drop{0.1\textheight}
   \begin{center}
   \vspace*{\drop}
   \rule{\textwidth}{0in}\par
-  {\Large\sffamily\thetitle\par}
+  {\Large\sffamily\kallisto\thetitle\par}
   \rule{\textwidth}{0in}\par
   \vfill
   \end{center}
@@ -85,11 +115,11 @@
 % custom title page
 \makeatletter
 \newlength\drop
-\newcommand*\titleM{\begingroup % Misericords, T&H p 153
+\newcommand*\titleM{\begingroup 
   \setlength\drop{0.15\textheight}
   \begin{center}
   \vspace*{\drop}
-  {\huge\sffamily\thetitle\par}
+  {\huge\sffamily\kallisto\thetitle\par}
   \vspace{2em}
   %{\normalsize\sffamily\textit\subtitletranslation\par}
   %\vspace{2em}
@@ -175,7 +205,6 @@
 \renewcommand{\cftchapternumwidth}{7em}
 \setlength{\cftchapterindent}{0em}
 \setlength{\cftsectionindent}{7em}
-\setlength{\cftbeforechapterskip}{-0.2em}
 \setsecnumdepth{chapter}
 \setcounter{tocdepth}{0}
 
