Update typographical settings in preamble.tex to adjust paragraph spacing and line spread.

--- a/partials/preamble.tex
+++ b/partials/preamble.tex
@@ -5,9 +5,9 @@
 %\hyphenpenalty=1000
 
 % typographical settings for the body text
-\setlength{\parskip}{0em}
+%\setlength{\parskip}{1pt plus2pt}
 \setlength{\parindent}{1em}
-%\linespread{1.2}
+\linespread{1.2}
 
 % PHYSICAL DOCUMENT SETUP
 \setstocksize{210mm}{148mm}
